--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "CareerLeap.ai",
-    "short_name": "CareerLeap",
+    "name": "Leap.ai",
+    "short_name": "Leap",
     "description": "AI-powered career growth platform",
     "start_url": "/",
     "display": "standalone",
