--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "careerleap-ai",
+  "name": "Leap-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,13 +18,14 @@
     "@radix-ui/react-switch": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "mailgun-js": "^0.22.0",
-    "next": "15.3.0",
+    "next": "^15.3.0",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5"
